--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                 opacity: 0;
             }
         }
+
         .responsive-text {
             font-size: 7vw;
             font-weight: 900;
@@ -23,13 +24,14 @@
 </head>
 <body>
 
-<div class="d-flex bd-highlight">
+<div class="d-flex bd-highlight" style="max-height: 100%;">
     <div class="p-2 flex-fill bd-highlight display-1">
         <span class="responsive-text" style="">MOBI HELP TUTOR AVAILABLE</span>
         <br>
         <img src="assets/img/arrow_right.png" alt="arrow_right" class="img-fluid blink_me">
     </div>
-    <div class="p-2 flex-fill bd-highlight"><img src="assets/img/qr_2000x2000.png" alt="QR Code" class="img-fluid"></div>
+    <div class="p-2 flex-fill bd-highlight"><img src="assets/img/qr_2000x2000.png" alt="QR Code" class="img-fluid">
+    </div>
 </div>
 
 <script src="assets/js/bootstrap.bundle.min.js"></script>
